--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <li><a class="dropdown-item" href="eatfit.html">EatFit</a></li>
                             <li><a class="dropdown-item" href="allegro.html">Allegro</a></li>
                             <li><a class="dropdown-item" href="pet_family.html">Pet Family</a></li>
-                            <li><a class="dropdown-item" href="all.html">Designs</a></li>
+                            <li><a class="dropdown-item" href="https://dribbble.com/rionadsouza">Designs</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -99,7 +99,7 @@
         </div>
         <!-- <div class="row projects">
             <div class="col-md-12">
-                <a href="all.html">
+                <a href="https://dribbble.com/rionadsouza">
                     <img src="images/all.png" alt="" height="396px">
                     <div class="caption"><h4>Other Designs</h4></div>
                 </a>
