--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <li><a class="dropdown-item" href="eatfit.html">EatFit</a></li>
                             <li><a class="dropdown-item" href="allegro.html">Allegro</a></li>
                             <li><a class="dropdown-item" href="pet_family.html">Pet Family</a></li>
-                            <li><a class="dropdown-item" href="https://dribbble.com/rionadsouza">Designs</a></li>
+                            <li><a class="dropdown-item" href="https://dribbble.com/rionadsouza" target="_blank">Designs</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -91,7 +91,7 @@
                 </a>
             </div>
             <div class="col-md-6">
-                <a href="https://dribbble.com/rionadsouza">
+                <a href="https://dribbble.com/rionadsouza" target="_blank">
                     <img src="images/all.png" alt="">
                     <div class="caption"><h4>Designs on Dribbble</h4></div>
                 </a>
